--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div id="text">Virus en cours de téléchargement</div>
 </div>
 <div id="b">
-    <img src="featured-image.png" alt="Hacking Phone" id="image">
+    <img src="a.jpg" alt="Hacking Phone" id="image" style="width: 30vh; display: block;">
+    <img src="KO.gif" alt="Hacking Phone" id="image" style="width: 45vh; display: block;">
+    <img src="b.jpg" alt="Hacking Phone" id="image" style="width: 30vh; display: block;">
 </div>
 <script>
     window.onload = function() {
